status code page update

--- a/views/includes/restaurants/restaurants-item.ejs
+++ b/views/includes/restaurants/restaurants-item.ejs
@@ -9,7 +9,7 @@
       <%= restaurant.description %>
     </p>
     <div class="restaurant-actions">
-      <a href="<%= restaurant.website %>" target="_blank">View Website</a>
+      <a href="/restaurants/<%= restaurant.id %>" target="_blank">View Website</a>
     </div>
   </article>
 </li>
